# jenkins_result_notifier

./: .gitignore  README.md  pyproject.toml
src/jenkins_result_notifier/applications/: containers.py
src/jenkins_result_notifier/applications/controllers/: notifier_controller.py
src/jenkins_result_notifier/applications/models/: jenkins_result.py
src/jenkins_result_notifier/domain/: metrics.py
src/jenkins_result_notifier/domain/service/: metrics.py
src/jenkins_result_notifier/infrastructure/datadog/: metrics.py
src/jenkins_result_notifier/scripts/: main.py
